--- a/css/roundTwo.css
+++ b/css/roundTwo.css
@@ -100,21 +100,7 @@ h2 {
   right: 100px;
 }
 
-.oneHun {
-  width: 200px;
-  margin: 10px;
-  border: 3px solid black;
-  background-color: blanchedalmond;
-}
-
 .twoHun {
-  width: 200px;
-  margin: 10px;
-  border: 3px solid black;
-  background-color: blanchedalmond;
-}
-
-.threeHun {
   width: 200px;
   margin: 10px;
   border: 3px solid black;
@@ -128,14 +114,28 @@ h2 {
   background-color: blanchedalmond;
 }
 
-.fiveHun {
+.sixHun {
   width: 200px;
   margin: 10px;
   border: 3px solid black;
   background-color: blanchedalmond;
 }
 
-.sixHun {
+.eightHun {
+  width: 200px;
+  margin: 10px;
+  border: 3px solid black;
+  background-color: blanchedalmond;
+}
+
+.thousand {
+  width: 200px;
+  margin: 10px;
+  border: 3px solid black;
+  background-color: blanchedalmond;
+}
+
+.twelveHun {
   width: 200px;
   margin: 10px;
   border: 3px solid black;
