--- a/css/roundOne.css
+++ b/css/roundOne.css
@@ -141,3 +141,27 @@ h2 {
   border: 3px solid black;
   background-color: blanchedalmond;
 }
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+#gameButt {
+  display: flex;
+  justify-content: center;
+}
+
+#button {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+}
+
+.score {
+  color: aliceblue;
+  display: flex;
+  text-align: end;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
