--- a/css/final.css
+++ b/css/final.css
@@ -22,5 +22,17 @@ button {
   text-align: center;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 4px 2px;
+}
+
+h3{
+  color:aliceblue;
+  display: flex;
+  justify-content: center;
+}
+
+form{
+  display: flex;
+  justify-content: center;
 }
