--- a/css/roundOne.css
+++ b/css/roundOne.css
@@ -150,6 +150,7 @@ form {
 #gameButt {
   display: flex;
   justify-content: center;
+  margin: 20px;
 }
 
 #button {
@@ -164,4 +165,11 @@ form {
   text-align: end;
   justify-content: space-evenly;
   margin-top: 50px;
+}
+
+#timer {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
